# cs494-irc

./: Cargo.toml  license.txt  readme.md
src/: curs.rs  lib.rs
src/client/: client_main.rs  curs.rs
src/lib/: test.rs
src/server/: serv_main.rs
