[package]
name = "irc"
version = "0.1.0"
authors = ["James Nichols <jtn4@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
bincode = "1.3"
bytes = "1.1"
num-derive = "0.3"
num-traits= "0.2"

[[bin]]
name = "server"
path = "src/server/serv_main.rs"

[[bin]]
name = "client"
path = "src/client/client_main.rs"
